...
        <TextView
            android:id="@+id/instruction_text"
            style="@style/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_create_list_instruction"
            app:layout_constraintBottom_toTopOf="@+id/list_name_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/next_btn"
        style="@style/transparent_button.large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
...
